[package]
name = "dot"
version = "0.2.1"
authors = ["Yury Antonov <1390348+yantonov@users.noreply.github.com>"]
edition = "2018"
description = "Helps to use dot files from the version control system"
license = "Apache-2.0"
repository = "https://github.com/yantonov/dot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.4.0"
clap = { version = "4.5.1", features = ["derive"] }
symlink = "0.1.0"
chrono = "0.4.34"
colored = "2.1.0"
regex = "1.10.3"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[[bin]]
name = "dot"
