[package]
name = "dot"
version = "0.2.2"
authors = ["Yury Antonov <1390348+yantonov@users.noreply.github.com>"]
edition = "2024"
description = "Helps to use dot files from the version control system"
license = "Apache-2.0"
repository = "https://github.com/yantonov/dot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.5.0"
clap = { version = "4.5.54", features = ["derive"] }
symlink = "0.1.0"
chrono = "0.4.43"
colored = "3.1.1"
regex = "1.12.2"

[profile.release]
# https://github.com/johnthagen/min-sized-rust
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # remove dead code and often times reduces binary size
codegen-units = 1 # to allow for maximum size reduction optimizations
panic = "abort" #  removes the need for this extra unwinding code

[[bin]]
name = "dot"
